# pyprecfloat

./: .gitignore  README.md  calculate.py  pyproject.toml  tox.ini
.github/workflows/: python-package.yml
pyprecfloat/: pyprecfloat.py
tests/: test_sample.py
