[project]
name = "pyprecfloat"
version = "0.0.1"
authors = [
  { name="Nicholas Puig", email="nickpuig2@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"